# prism

./: .gitmodules  CMakeLists.txt  NOTICE  README.md  build.gradle  pyproject.toml
.github/workflows/: release.yml
bindings/py/prism/prism/: core.py  lib.py
defs/: boy_pc_reader.def  boy_pc_reader32.def  sa32.def  zdsr32.def
doc/src/: SUMMARY.md
doc/src/api/: backend-functions.md  backend-identifiers.md  backend-limits.md  context-management.md  error-codes.md
gdextension/: CMakeLists.txt
gdextension/project/: example.gd  example.gd.uid  example.tscn  project.godot
gdextension/src/: godot_prism_backend.cpp  godot_prism_backend.h  godot_prism_context.cpp  godot_prism_context.h  register_types.cpp  register_types.h
idl/: nvdaController.acf  nvdaController.idl
include/: prism.h
source/: backend_check.cpp  delayimp.cpp  prism.cpp  simdutf.cpp  simdutf.h
source/backends/: backend.h  backend_registry.cpp  backend_registry.h  boy_pc_reader.cpp  orca.cpp  zdsr.cpp
source/backends/raw/: boy_pc_reader.h
tests/android/simple-app/src/main/cpp/: CMakeLists.txt
